# gerenciador_condominios

./: .coverage  .dockerignore  .env.example  .env.production.example  .flake8  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  ADVANCED_FEATURES_README.md  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_ARCHITECTURE_REPORT.md  DATABASE_ARCHITECTURE_ANALYSIS.md  DATABASE_REFACTORING_GUIDE.md  Dockerfile  ENTERPRISE_FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  README.md  REFACTORING_EXAMPLE.md  REFACTORING_PLAN.md  backup_condominio_20260402.json  backup_condominio_20260402_162358.dump  coverage.xml  dados.txt  database_migration_scripts.sql  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  dumpdata_errors.txt  generate_notice_pdf.py  local_backup.sql  manage.py  mypy.ini  pyproject.toml  (+19 more)
.claude/: settings.json  settings.local.json
.claude/agents/: implementer.md  reviewer.md  tester.md
.claude/hooks/: conventional-commit.cjs  post-edit-lint.sh  pre-commit-conventional.sh  pre-db-push-guard.sh  pre-edit-scope.sh  session-start.sh
.claude/rules/: api-design.md  architecture.md  coding-standards.md  database.md  design-principles.md  financial.md  frontend.md  security.md  testing.md
.claude/skills/: debug.md  new-feature.md  refactor.md
.claude/workflows/: coverage-sweep.js  review-diff.js
.github/workflows/: ci.yml
backup_json/: apartment.json  building.json  creditcard.json  dependent.json  employeepayment.json  expense.json  expensecategory.json  expenseinstallment.json  financialsettings.json  furniture.json  income.json  lease.json  person.json  personincome.json  personpayment.json  rentpayment.json  tenant.json  user.json
backups/: backup_condominio_20260119_135207.sql  backup_condominio_20260119_143116.sql  backup_condominio_20260119_145026.sql
condominios_manager/: asgi.py  celery.py  logging_config.py  settings.py  settings_production.py  urls.py  wsgi.py
core/: adapters.py  admin.py  apps.py  auth.py  authentication.py  cache.py  contract_rules.py  exceptions.py  jinja_environment.py  models.py  pagination.py  permissions.py  query_params.py  serializers.py  signals.py  tasks.py  throttles.py  urls.py  utils.py  views.py
core/infrastructure/: __init__.py  pdf_generator.py  storage.py
core/middleware/: __init__.py  logging_middleware.py
core/migrations/: 0001_add_validators_and_indexes.py  0001_initial.py  0002_add_composite_indexes.py  0002_lease_number_of_tenants.py  0003_refactor_database.py  0004_add_validators_and_indexes.py  0005_add_composite_indexes.py  0006_add_tenant_user_fk.py  0007_tenant_user.py  0008_add_audit_softdelete_mixins.py  0009_alter_dependent_phone_alter_tenant_phone.py  0010_add_landlord_model.py  0011_contractrule.py  0012_add_financial_module.py  0013_add_expense_category_parent.py  0014_add_expense_is_offset.py  0015_add_person_payment.py  0016_add_expense_end_date.py  0017_add_new_fields.py  0018_migrate_data_and_rename.py  0019_remove_old_fields.py  0020_lease_apartment_fk.py  0021_person_initial_balance.py  0022_occupancy_pricing.py  0023_rentadjustment.py  0024_lease_last_rent_increase_date.py  0025_populate_lease_last_rent_increase_date.py  0026_financial_settings_rent_adjustment_percentage.py  0027_remove_financialsettings_rent_adjustment_percentage_and_more.py  0028_ipca_index.py  0029_lease_pending_rental_value.py  0030_person_payment_schedule.py  0031_month_snapshot.py  0032_mobile_models.py  0033_mobile_models.py  0034_alter_paymentproof_managers.py  0035_data_integrity_protect_cascade_constraints.py  0036_add_missing_indexes.py  0037_soft_delete_unique_constraints.py  0038_add_check_constraints.py  (+19 more)
core/services/: __init__.py  base.py  cash_flow_service.py  contract_service.py  daily_control_service.py  dashboard_service.py  date_calculator.py  expense_service.py  fee_calculator.py  ipca_service.py  (+18 more)
docs/: DEVELOPMENT.md  FINANCES.md  LESSONS_LEARNED.md  STATUS.md
finances/: apps.py  cache.py  models.py  money.py  serializers.py  signals.py  urls.py
frontend/: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  README.md  index.html  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.sw.json  vitest.config.mts  vitest.config.ts
mobile/: .env.example  app.json  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
prompts/: 00-prompt-standard.md  01-backend-models.md  02-backend-serializers.md  03-backend-viewsets-simple.md  04-backend-viewsets-expense.md  05-backend-viewsets-income-payment.md  06-backend-cashflow-service.md  07-backend-dashboard-service.md  08-backend-simulation-endpoints.md  09-frontend-schemas-hooks.md  10-frontend-navigation-base-pages.md  11-frontend-expenses-page.md  12-frontend-income-payments-employees.md  13-frontend-financial-dashboard.md  14-frontend-simulator.md  15-permissions-e2e-polish.md  16-backend-fixes-gaps.md  17-frontend-schemas-hooks-fixes.md  18-frontend-person-payments-page.md  19-frontend-daily-control.md  20-person-income-page-polish-tests.md  21-backend-rent-schedule-service.md  22-backend-rent-calendar-endpoints.md  23-frontend-rent-calendar-hooks.md  24-frontend-rent-calendar-ui.md  25-refactor-consumer-and-audit.md  26-frontend-responsive-foundations.md  27-frontend-datatable-cards.md  28-frontend-pwa-manifest-icons.md  29-frontend-serwist-service-worker.md  30-frontend-offline-cache.md  31-backend-webpush-model.md  32-backend-webpush-sender-endpoints.md  33-frontend-webpush-ui.md  34-finances-app-infra-condominium.md  35-forms-owner-salary-prepaid.md  36-finances-models-bills.md  37-finances-bill-services-cache.md  38-finances-serializers-viewsets-calendar.md  39-finances-frontend-data-layer.md  (+27 more)
scripts/: backup_db.py  deploy.sh  generate_metrics.py  import_caixa_abril.py  import_financial_data.py  parse_itau_fatura.py  restore_db.py  setup_windows.bat
tests/: CLAUDE.md  __init__.py  conftest.py  constants.py  factories.py
(+915 files in other folders)
